{
    "name": "TestInputActions",
    "maps": [
        {
            "name": "Test",
            "id": "c1260881-846b-4a03-a6e8-679c78cec99d",
            "actions": [
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "23ed01f2-f29c-4fd4-a4a7-b3ad297b916b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "291a6c6c-2e33-4727-8fa4-b8672e6a0b17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test3",
                    "type": "Button",
                    "id": "12c820a0-f733-4852-a932-896dae40247e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test4",
                    "type": "Button",
                    "id": "2ac80e25-ce55-4e44-acfe-207506b60956",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test5",
                    "type": "Button",
                    "id": "833637a5-4dd5-4c3d-9c14-f8d43cd58f79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LClick",
                    "type": "Button",
                    "id": "7c171a92-5f04-4249-9a69-cfc35b8ab27f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RClick",
                    "type": "Button",
                    "id": "1359d36e-58f6-4c71-848d-9054e1d0abc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestWASD",
                    "type": "Value",
                    "id": "8ae16a5b-aeab-41ff-b6a4-3a288f26acf1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54ebb0f0-591a-4bfa-a733-51d474a23cb7",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5053fc45-2229-47f7-b731-361e86a5767b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b263d66d-359a-4ca5-85a4-cc00c43b83b0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d276077d-ea43-4616-892b-24461c438ad7",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46a5cd4d-fd38-4fc8-9bd0-5fa60c960635",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "410c6953-1bad-4791-956f-d67a767eba49",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "LClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "677048b1-32f0-45bb-b9f9-36fe53273422",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "RClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "705b986d-60b2-437f-b238-7a50a0e779fa",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestWASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "16e3738b-74dc-4960-9a9f-645eddc9a908",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "TestWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c03e74dc-6bcb-41a6-98bf-67e2bd7f07b4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "TestWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "97497a86-a100-4c23-89c1-c9c76787e05f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "TestWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "79429ff9-1d3f-487c-95a9-80d26092a7c4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "TestWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}